// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`goes back to a timer view 1`] = `
<div>
  <div
    class="sc-jrcSnH dcXPTj"
  >
    <div
      class="sc-jSVbBN htDmhB"
    >
      <div
        class="sc-iBYQGD jnsiEs"
      >
        <span
          class="sc-ftTHFa"
        >
          0
        </span>
        <span
          class="sc-pyfiu laaNyd"
        >
          42
        </span>
      </div>
      <button
        class="sc-dkrGVk sc-eDvSBu iMrLIa enYyxP"
      >
        Stop
      </button>
    </div>
    <div
      class="sc-kDvvrc vaqM"
    >
      <button
        class="sc-dkrGVk sc-hLBbCX iMrLIa eva-DXt"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5a2 2 0 00-2 2v4h2V5h14v14H5v-4H3v4a2 2 0 002 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
      </button>
      <button
        aria-label="View Graph"
        class="sc-dkrGVk sc-hLBbCX iMrLIa eva-DXt"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M176 64h64v384h-64zM80 336h64v112H80zM272 272h64v176h-64zM368 176h64v272h-64z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders 1`] = `
<div
  class="sc-jrcSnH dcXPTj"
>
  <div
    class="sc-jSVbBN htDmhB"
  >
    <div
      class="sc-iBYQGD jnsiEs"
    >
      <span
        class="sc-ftTHFa"
      >
        0
      </span>
      <span
        class="sc-pyfiu laaNyd"
      >
        42
      </span>
    </div>
    <button
      class="sc-dkrGVk sc-eDvSBu iMrLIa enYyxP"
    >
      Stop
    </button>
  </div>
  <div
    class="sc-kDvvrc vaqM"
  >
    <button
      class="sc-dkrGVk sc-hLBbCX iMrLIa eva-DXt"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5a2 2 0 00-2 2v4h2V5h14v14H5v-4H3v4a2 2 0 002 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
    </button>
    <button
      aria-label="View Graph"
      class="sc-dkrGVk sc-hLBbCX iMrLIa eva-DXt"
    >
      <svg
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M176 64h64v384h-64zM80 336h64v112H80zM272 272h64v176h-64zM368 176h64v272h-64z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`views a performance graph 1`] = `
<div>
  <div
    class="sc-jrcSnH dcXPTj"
  >
    <div
      class="sc-gswPWN bpexcZ"
    >
      No performance graph to show yet!
    </div>
    <div
      class="sc-kDvvrc vaqM"
    >
      <button
        class="sc-dkrGVk sc-hLBbCX iMrLIa eva-DXt"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M10.09 15.59L11.5 17l5-5-5-5-1.41 1.41L12.67 11H3v2h9.67l-2.58 2.59zM19 3H5a2 2 0 00-2 2v4h2V5h14v14H5v-4H3v4a2 2 0 002 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
      </button>
      <button
        aria-label="View Timer"
        class="sc-dkrGVk sc-hLBbCX iMrLIa eva-DXt"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M9 1h6v2H9zM19.03 7.39l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42A8.962 8.962 0 0012 4a9 9 0 00-9 9c0 4.97 4.02 9 9 9a8.994 8.994 0 007.03-14.61zM13 14h-2V8h2v6z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
